# demoscope

./: .gitignore  CHANGELOG.md  CREDITS.md  Cargo.toml  README.md  ROADMAP.md
.github/workflows/: pages.yml  regression.yml  release.yml
docs/: COMPATIBILITY.md  FORMAT.md  PROTO4.md
scripts/: build-wasm.sh  p2_bittrace.js  p2_engine_trace.md  run_trace.py
src/: bitreader.rs  bsp.rs  check.rs  constants.rs  events.rs  goldsrc.rs  header.rs  html.rs  json.rs  lib.rs  main.rs  multi_player.rs  packets.rs  template.html
src/bsp/: goldsrc.rs  mod.rs  quake.rs  source.rs
src/goldsrc/: entities.rs  mod.rs
src/protobuf/: mod.rs  reader.rs
src/quake/: mod.rs  q1.rs  q2.rs  q3.rs
src/render/: json.rs  mod.rs
src/render/html/: diff.rs  dual_template.html  engines.rs  mod.rs  template.html
src/source/: datatable.rs  events.rs  mod.rs  multi_player.rs  packetentities.rs  packets.rs  sendprop.rs  stringtable.rs
src/source/csgo/: entities.rs  events.rs  message.rs  mod.rs  sendtable.rs  stringtables.rs
src/source/player_tracks/: mod.rs  scan.rs
src/source2/: bitreader.rs  container.rs  entities.rs  fieldpath.rs  kv3.rs  map.rs  mod.rs  parser.rs  quantizedfloat.rs  resource.rs  serializer.rs  snappy.rs  stringtable.rs  vphys.rs  vpk.rs
src/source_demo/: bitreader.rs  datatable.rs  mod.rs  packetentities.rs  player_tracks.rs  sendprop.rs  stringtable.rs
src/util/: bytes.rs  mod.rs
web/: index.html
